--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -1,3 +1,9 @@
 .about {
     background-color: beige;
+    background-color: royalblue;
+    display: grid;
+    grid-template-columns: 150px 150px;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 120%;
 }
