--- a/src/components/contact.module.css
+++ b/src/components/contact.module.css
@@ -1,17 +1,17 @@
-:global body {
-    background-color: green;
-    font-family: Georgia, 'Times New Roman', Times, serif
+:global(body) {
+    background-color: eggshell;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .header {
-    color: red;
+    color: green;
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    border-top: dotted gray 1px;
-    border-bottom: dotted gray 1px;
+    border-top: solid royalblue 1px;
+    border-bottom: solid royalblue 1px;
     font-size: small;
 }
 
@@ -19,9 +19,23 @@
     height: 350px;
     font-size: large;
     display: flex;
-    justify-content: space-between;
+    padding: 200px;
+    justify-content: space-evenly;
     align-items: center;
     color: green;
     flex-basis: 30%;
-    border: 1px dashed magenta;
+    border: 1px solid royalblue;
+}
+
+/* #content {
+    background-image: ;
+} */
+
+.linkedin {
+    color: inherit;
+    transition: color 160ms ease;
+}
+
+.linkedin:hover {
+    color: lightcoral;
 }
