--- a/src/components/contact.module.css
+++ b/src/components/contact.module.css
@@ -15,6 +15,12 @@
     font-size: small;
 }
 
+.content {
+    background-image: url('/media/pexels-eva-bronzini-7965294.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
 .info {
     height: 350px;
     font-size: large;
@@ -27,9 +33,6 @@
     border: 1px solid royalblue;
 }
 
-/* #content {
-    background-image: ;
-} */
 
 .linkedin {
     color: inherit;
